--- a/contact.html
+++ b/contact.html
@@ -58,15 +58,15 @@
         <div class="boxes">
             <div>
                 <span class="text-secondary">Email: </span>
-                johndoe@test.com
+                asen.chekov@gmail.com
             </div>
             <div>
                 <span class="text-secondary">Phone: </span>
-                (555) 555-5555
+                +44 7802 468 794
             </div>
             <div>
                 <span class="text-secondary">Address: </span>
-                50 Main st, Boston MA 02101
+                Oswestry, Shropshire, UK
             </div>
         </div>
     </main>
