--- a/index.html
+++ b/index.html
@@ -49,23 +49,20 @@
 
     <main id="home">
         <h1 class="lg-heading">
-            John
-            <span class="text-secondary">Doe</span>
+            Asen
+            <span class="text-secondary">Chekov</span>
         </h1>
         <h2 class="sm-heading">
-            Web Developer, Programmer, Designer & Entrepreneour
+            Junior Web Developer, Javascript Developer
         </h2>
         <div class="icons">
-            <a href="#!">
-                <i class="fab fa-twitter fa-2x"></i>
-            </a>
-            <a href="#!">
+            <a href="https://www.facebook.com/asen.chekov">
                 <i class="fab fa-facebook fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="http://www.linkedin.com/in/asen-chekov">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="http://www.github.com/asenchekov">
                 <i class="fab fa-github fa-2x"></i>
             </a>
         </div>
