--- a/work.html
+++ b/work.html
@@ -57,17 +57,17 @@
         </h2>
         <div class="projects">
             <div class="item">
-                <a href="#!">
+                <a href="https://asenchekov.github.io/Wordbeater-javascript/">
                     <img src="img/projects/project1.jpg" alt="Project">
                 </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
+                <a href="https://asenchekov.github.io/Wordbeater-javascript/" class="btn-light">
+                    <i class="fas fa-eye"></i> WordBeater
                 </a>
-                <a href="#" class="btn-light">
+                <a href="https://github.com/asenchekov/Wordbeater-javascript" class="btn-light">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <a href="#!">
                     <img src="img/projects/project2.jpg" alt="Project">
                 </a>
@@ -110,7 +110,7 @@
                 <a href="#" class="btn-light">
                     <i class="fab fa-github"></i> Github
                 </a>
-            </div>
+            </div> -->
         </div>
     </main>
 
