--- a/work.html
+++ b/work.html
@@ -67,17 +67,18 @@
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
-            <!-- <div class="item">
+            <div class="item">
                 <a href="#!">
                     <img src="img/projects/project2.jpg" alt="Project">
                 </a>
-                <a href="#" class="btn-light">
+                <a href="https://note-posts-meteor.herokuapp.com/" class="btn-light">
                     <i class="fas fa-eye"></i> Project
                 </a>
-                <a href="#" class="btn-light">
+                <a href="https://github.com/asenchekov/Asen-Portfolio-Site" class="btn-light">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
+            <!--
             <div class="item">
                 <a href="#!">
                     <img src="img/projects/project3.jpg" alt="Project">
