--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="item">
-                <a href="#!">
+                <a href="https://note-posts-meteor.herokuapp.com/">
                     <img src="img/projects/project2.jpg" alt="Project">
                 </a>
                 <a href="https://note-posts-meteor.herokuapp.com/" class="btn-light">
