--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
                     <img src="img/projects/project2.jpg" alt="Project">
                 </a>
                 <a href="https://note-posts-meteor.herokuapp.com/" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
+                    <i class="fas fa-eye"></i> NotePost Meteor App
                 </a>
                 <a href="https://github.com/asenchekov/Asen-Portfolio-Site" class="btn-light">
                     <i class="fab fa-github"></i> Github
