update: add more projects

--- a/work.html
+++ b/work.html
@@ -57,61 +57,61 @@
         </h2>
         <div class="projects">
             <div class="item">
-                <a href="https://asenchekov.github.io/Wordbeater-javascript/">
+                <a href="https://asenchekov.github.io/Wordbeater-javascript/" target="_blank">
                     <img src="img/projects/project1.jpg" alt="Project">
                 </a>
-                <a href="https://asenchekov.github.io/Wordbeater-javascript/" class="btn-light">
+                <a href="https://asenchekov.github.io/Wordbeater-javascript/" class="btn-light" target="_blank">
                     <i class="fas fa-eye"></i> WordBeater
                 </a>
-                <a href="https://github.com/asenchekov/Wordbeater-javascript" class="btn-light">
+                <a href="https://github.com/asenchekov/Wordbeater-javascript" class="btn-light" target="_blank">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
             <div class="item">
-                <a href="https://note-posts-meteor.herokuapp.com/">
+                <a href="https://note-posts-meteor.herokuapp.com/" target="_blank">
                     <img src="img/projects/project2.jpg" alt="Project">
                 </a>
-                <a href="https://note-posts-meteor.herokuapp.com/" class="btn-light">
-                    <i class="fas fa-eye"></i> NotePost Meteor App
+                <a href="https://note-posts-meteor.herokuapp.com/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> NotePost
                 </a>
-                <a href="https://github.com/asenchekov/Asen-Portfolio-Site" class="btn-light">
+                <a href="https://github.com/asenchekov/Notes-MeteorJS-Project" class="btn-light" target="_blank">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
-            <!--
+            
             <div class="item">
-                <a href="#!">
-                    <img src="img/projects/project3.jpg" alt="Project">
+                <a href="https://burger-app-react-c5df6.web.app" target="_blank">
+                    <img src="img/projects/project3.png" alt="Project">
                 </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
+                <a href="https://burger-app-react-c5df6.web.app" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> Make a burger
                 </a>
-                <a href="#" class="btn-light">
-                    <i class="fab fa-github"></i> Github
-                </a>
-            </div>
-            <div class="item">
-                <a href="#!">
-                    <img src="img/projects/project4.jpg" alt="Project">
-                </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
-                </a>
-                <a href="#" class="btn-light">
+                <a href="https://github.com/asenchekov/burger-app-react" class="btn-light" target="_blank">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
             <div class="item">
-                <a href="#!">
-                    <img src="img/projects/project5.jpg" alt="Project">
+                <a href="https://asenchekov.github.io/study-project/" target="_blank">
+                    <img src="img/projects/project4.png" alt="Project">
                 </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
+                <a href="https://asenchekov.github.io/study-project/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> Favorite shows
                 </a>
-                <a href="#" class="btn-light">
+                <a href="https://github.com/asenchekov/study-project" class="btn-light" target="_blank">
                     <i class="fab fa-github"></i> Github
                 </a>
-            </div> -->
+            </div>
+            <div class="item">
+                <a href="https://streatham-kitchen-bookings.firebaseapp.com/" target="_blank">
+                    <img src="img/projects/project5.png" alt="Project">
+                </a>
+                <a href="https://streatham-kitchen-bookings.firebaseapp.com/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> Streatham Kitchen
+                </a>
+                <a href="https://github.com/asenchekov/streatham-kitchen-react" class="btn-light" target="_blank">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
         </div>
     </main>
 
