--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span class="text-secondary">Chekov</span>
         </h1>
         <h2 class="sm-heading">
-            Junior Web Developer, Javascript Developer
+            Web Developer
         </h2>
         <div class="icons">
             <a href="https://www.facebook.com/asen.chekov">
