--- a/about.html
+++ b/about.html
@@ -60,63 +60,43 @@
 
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
-                <p>My employment history until now was in the hospitality work area as a chef, 
-                    I hope that doesn't confuse you. I have a passion for coding since I was young, 
-                    used to play around with MS-DOS, QBASIC and PASCAL but took a different path 
-                    and profession. I've been always the guy helping my friends fixing their computers
-                    and reinstalling operating systems and such. Recently decided to make a change 
-                    and started studying for a web developer, with the dream of making it my 
-                    full-time job. Since I started learning to code I keep telling myself that 
-                    I should've started a long time ago. I've achieved certification for a 
-                    Beginner Web Developer and CIW certification for Advanced HTML5 and CSS3 
-                    specialist, and recently started a Certification program for Introduction 
-                    to Computer Science at HarvardX by EdX platform. Along with these lessons 
-                    I have few free courses finished at codecademy.com for Javascript and React.js. 
-                    At my current position I'm working on Meteor.js framework based project. 
-                    Gaining experience writing ES6 style code, working with MongoDB and various 
-                    tools for it. Also learned to test http requests with ngrok. I am an amateur 
-                    photographer and also like making logos using photoshop and illustrator.</p>
+                <p>My journey starts in 2018, with a self-teaching process to start my long-
+                    desired developer career, while still working on my full-time position as a
+                    chef. After about 10 months passing my interview task and a 1-on-1 call
+                    with the CEO starts my first job as an unpaid part-time internship as a
+                    Javascript Developer. Few months ahead after successfully developed a
+                    new feature as an intern, I managed to land a full-stack Javascript
+                    Developer position in a private company where I still work currently
+                    evaluated as a mid-level developer.
+                </p>
             </div>
             <div class="job job-1">
-                <h3>EdX platform HarvardX</h3>
-                <h5>CS50 : Introduction to computer science</h5>
-                <p>A broad and robust understanding of computer science and programming
-                    How to think algorithmically and solve programming problems efficiently
-                    Concepts like abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web development
-                    Familiarity in a number of languages, including C, Python, SQL, and JavaScript plus CSS and HTML
-                    How to engage with a vibrant community of like-minded learners from all levels of experience
-                    How to develop and present a final programming project to your peers</p>
+                <h3>JavaScript Developer Intern - Remote</h3>
+                <h5>ZipBoard | Nov 2018 - Feb 2019</h5>
+                <p>Stack: NodeJS, MeteorJS, MongoDB</p>
+                <p>Developed slack integration into the company's project.
+                    Working mostly on the back-end handling server requests,
+                    gaining knowledge about asynchronous Javascript and MongoDB.
+                    Creating models and participating in deployment of new features.
+                </p>
             </div>
             <div class="job job-2">
-                <h3>CIW</h3>
-                <h5>Advanced HTML5 and CSS3 specialist</h5>
-                <p>This course builds upon a students existing manual 
-                    coding skills to teach you how to develop Web documents 
-                    using new elements, attributes and selectors introduced 
-                    in HTML5 and CSS3. The course will give students an essential 
-                    knowledge of HTML5, Cascading Style Sheets (CSS) and JavaScript 
-                    Programming. These 3 technologies are known as the "HTML5 Family" 
-                    or "Web development trifecta" and can help create Web pages that 
-                    easily adapt to tablets, mobile devices, gaming devices, smart TVs 
-                    and traditional desktop PCs.</p>
-            </div>
-            <div class="job job-3">
-                <h3>New Skills Accademy</h3>
-                <h5>Website Development for Beginners Certificate</h5>
-                <p>The past, present and future of the Internet and the Web
-                    What terms client-side and server-side mean in the context of Web Development
-                    How to create a simple HTML document and setup the basic skeleton of a web page
-                    How to use various HTML elements to create the different sections of the web page
-                    How to add styling code to HTML in internal and external style sheets using CSS
-                    Why you should use CSS alongside HTML to build beautiful pages
-                    Important concepts of coding for the Web including the CSS Box Model, the HTML DOM model and JavaScript’s Object Orientation
-                    How to use JavaScript code into HTML documents in order to change and modify the structure as well as adding interactivity to the web page</p>
+                <h3>Full-Stack JavaScript Developer - Remote</h3>
+                <h5>Private company | Feb 2018 - present</h5>
+                <p>Stack: NodeJS, MeteorJS, ReactJS, Redux,
+                    PostgreSQL, Cassandra, RabbitMQ, Redis</p>
+                <p>Participating in one of the biggest NodeJS projects in the world.
+                    Utilizing latest standards in the field,
+                    CI/CD and agile development. Growing to mid-level developer
+                    being able to mentor juniors in the team.
+                    Taking part in project planing, writing functional specs.
+                </p>
             </div>
         </div>
     </main>
 
     <footer id="main-footer">
-        Copyright &copy; 2018
+        Copyright &copy; 2020
     </footer>
     <script src="js/main.js"></script>
 </body>
