Fix: bad url's on porjects in my work page

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 <p>My journey starts in 2018, with a self-teaching process to start my long-
                     desired developer career, while still working on my full-time position as a
                     chef. After about 10 months passing my interview task and a 1-on-1 call
-                    with the CEO starts my first job as an unpaid part-time internship as a
+                    with the CEO starts my first unpaid job as a
                     Javascript Developer. Few months ahead after successfully developed a
                     new feature as an intern, I managed to land a full-stack Javascript
                     Developer position in a private company where I still work currently
