--- a/work.html
+++ b/work.html
@@ -57,13 +57,24 @@
         </h2>
         <div class="projects">
             <div class="item">
-                <a href="https://asenchekov.github.io/Wordbeater-javascript/" target="_blank">
-                    <img src="img/projects/project1.jpg" alt="Project">
+                <a href="https://streatham-kitchen.web.app/" target="_blank">
+                    <img src="img/projects/project5.png" alt="Project">
                 </a>
-                <a href="https://asenchekov.github.io/Wordbeater-javascript/" class="btn-light" target="_blank">
-                    <i class="fas fa-eye"></i> WordBeater
+                <a href="https://streatham-kitchen.web.app/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> Streatham Kitchen
                 </a>
-                <a href="https://github.com/asenchekov/Wordbeater-javascript" class="btn-light" target="_blank">
+                <a href="https://github.com/asenchekov/streatham-kitchen-react" class="btn-light" target="_blank">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+            <div class="item">
+                <a href="https://asenchekov.github.io/tv-series-app/" target="_blank">
+                    <img src="img/projects/project4.png" alt="Project">
+                </a>
+                <a href="https://asenchekov.github.io/tv-series-app/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> Favorite shows
+                </a>
+                <a href="https://github.com/asenchekov/tv-series-app" class="btn-light" target="_blank">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
@@ -78,7 +89,17 @@
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
-            
+            <div class="item">
+                <a href="https://asenchekov.github.io/Wordbeater-javascript/" target="_blank">
+                    <img src="img/projects/project1.jpg" alt="Project">
+                </a>
+                <a href="https://asenchekov.github.io/Wordbeater-javascript/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> WordBeater
+                </a>
+                <a href="https://github.com/asenchekov/Wordbeater-javascript" class="btn-light" target="_blank">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
             <div class="item">
                 <a href="https://burger-app-react-c5df6.web.app" target="_blank">
                     <img src="img/projects/project3.png" alt="Project">
@@ -87,28 +108,6 @@
                     <i class="fas fa-eye"></i> Make a burger
                 </a>
                 <a href="https://github.com/asenchekov/burger-app-react" class="btn-light" target="_blank">
-                    <i class="fab fa-github"></i> Github
-                </a>
-            </div>
-            <div class="item">
-                <a href="https://asenchekov.github.io/study-project/" target="_blank">
-                    <img src="img/projects/project4.png" alt="Project">
-                </a>
-                <a href="https://asenchekov.github.io/study-project/" class="btn-light" target="_blank">
-                    <i class="fas fa-eye"></i> Favorite shows
-                </a>
-                <a href="https://github.com/asenchekov/study-project" class="btn-light" target="_blank">
-                    <i class="fab fa-github"></i> Github
-                </a>
-            </div>
-            <div class="item">
-                <a href="https://streatham-kitchen-bookings.firebaseapp.com/" target="_blank">
-                    <img src="img/projects/project5.png" alt="Project">
-                </a>
-                <a href="https://streatham-kitchen-bookings.firebaseapp.com/" class="btn-light" target="_blank">
-                    <i class="fas fa-eye"></i> Streatham Kitchen
-                </a>
-                <a href="https://github.com/asenchekov/streatham-kitchen-react" class="btn-light" target="_blank">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
